--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
     "framer-motion": "^11.2.11",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
